[package]
edition = "2024"
name = "telemetry-sentinel"
version = "0.1.0"
license = "AGPL-3.0"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "bddb137c331b79f2911dfd486b575347e4489468", features = ["defmt", "stm32f407vg", "unstable-pac", "memory-x", "time-driver-tim4", "exti"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "bddb137c331b79f2911dfd486b575347e4489468", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "bddb137c331b79f2911dfd486b575347e4489468", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

[profile.release]
debug = 2
